fix: adjust cards gap and main padding

--- a/challenge_2/src/App.css
+++ b/challenge_2/src/App.css
@@ -8,4 +8,5 @@ main {
   display: flex;
   flex-direction: column;
   padding: 20px;
+  padding-bottom: 50px;
 }
