--- a/challenge_2/src/components/ProductSection/style.css
+++ b/challenge_2/src/components/ProductSection/style.css
@@ -1,7 +1,7 @@
 .product-section {
   display: flex;
   flex-wrap: wrap;
-  gap: 30px;
+  gap: 30px 20px;
   align-items: center;
   justify-content: center;
 }
